test/cli/scenarios_to_cli/samples/best practices/add_safe_to_evict/kyverno-test.yaml
name: add-safe-to-evict
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: add-safe-to-evict
    rule: annotate-empty-dir
    resource: pod-with-emptydir
    kind: Pod
    result: pass
  - policy: add-safe-to-evict
    rule: annotate-host-path
    resource: pod-with-emptydir
    kind: Pod
    result: skip
